Added any pictures and created CSS file for catalog. Any changes in another CSS and CSHTML files

--- a/RentCar/RentCar.csproj
+++ b/RentCar/RentCar.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\Images\hatchback3d.png\**" />
+    <Content Remove="wwwroot\Images\hatchback3d.png\**" />
+    <EmbeddedResource Remove="wwwroot\Images\hatchback3d.png\**" />
+    <None Remove="wwwroot\Images\hatchback3d.png\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Fonts\" />
   </ItemGroup>
 
