Transform to 3-layer architecture has been finished Add services (for BAL) and repositories (for DAL); adapt all pages and functions to 3-layer architecture; add interfaces (contracts for DAL) for app; Delete all car pictures; update interface of any pages.

--- a/RentCar/RentCar.csproj
+++ b/RentCar/RentCar.csproj
@@ -7,13 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="wwwroot\Images\hatchback3d.png\**" />
-    <Content Remove="wwwroot\Images\hatchback3d.png\**" />
-    <EmbeddedResource Remove="wwwroot\Images\hatchback3d.png\**" />
-    <None Remove="wwwroot\Images\hatchback3d.png\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Remove="Pages\StyleSheet.css" />
   </ItemGroup>
 
@@ -24,6 +17,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BAL\BAL.csproj" />
+    <ProjectReference Include="..\DAL\DAL.csproj" />
   </ItemGroup>
 
   <ItemGroup>
